[project]
name = "massive-researcher"
version = "0.1.0"
description = "Multi-source deep research platform using AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
keywords = ["research", "ai", "openai", "perplexity", "grok", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Agentic Framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # API Clients
    "openai>=1.40.0",           # For OpenAI AND Perplexity (OpenAI-compatible)
    "google-genai>=1.0.0",      # For Google Gemini Deep Research (Interactions API)
    "httpx>=0.27.0",            # For xAI/Grok API calls

    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Output Generation
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",

    # Utilities
    "tenacity>=8.2.0",          # Retry logic
    "structlog>=24.0.0",        # Structured logging
    "rich>=13.0.0",             # Progress display
    "diskcache>=5.6.0",         # Result caching
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.0",         # Requires system deps: cairo, pango, gdk-pixbuf
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "respx>=0.21.0",            # Mock httpx requests
]
all = [
    "massive-researcher[pdf,dev]",
]

[project.scripts]
massive-researcher = "massive_researcher.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/massive-researcher"
Repository = "https://github.com/yourusername/massive-researcher"
Issues = "https://github.com/yourusername/massive-researcher/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/massive_researcher"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["massive_researcher"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/massive_researcher --cov-report=term-missing"
